# utromfx

./: .gitignore  CMakeLists.txt  G1Controller.h  README.md  generate_mock.py  pyproject.toml
src/reflex_g1/: main_g1.cpp
src/reflex_g1/include/: utrom_g1.h
src/utromfx_core/include/utromfx/: kernels.h  kernels_neon.h  state_buffer.h  telemetry_protocol.h
tests/: benchmark_bridge.cpp  test_bridge.cpp  test_disk_writer.cpp  test_parity.py  test_secure_shutdown.cpp  verify_protocol.cpp
utromfx/: converter.py  decoder.py  main.py
utromfx/compiler/: codegen.py  validator.py
